# open-data-ai-safe-city

./: README.md
safecity-project/: .gitignore  README.md  app.py  create_structure.py  main.py  pyproject.toml
safecity-project/ai/: comparison_insights.py  prompt_builder.py  safety_insights.py
safecity-project/app/: streamlit_app.py
safecity-project/data/processed/: crime_summary.csv  department_risk_index.csv
safecity-project/data/raw/population/: population_departement.xls.xls
safecity-project/data_ingestion/: crime.py  population.py
safecity-project/data_processing/: ai_features.py  crime_categories.py  crime_processing.py  geo_processing.py  risk_scoring.py
safecity-project/outputs/maps/: department_risk_2022.html
safecity-project/pipeline/: enrich.py  extract.py  run.py  transform.py  validate.py
safecity-project/scripts/: build_crime_summary.py  build_geo_risk.py  build_risk_index.py  build_risk_map.py  inspect_categories.py  inspect_crime_data.py  inspect_indicators.py  test_ai_insights.py
safecity-project/tests/: test_data_ingestion.py  test_llm.py
safecity-project/utils/: analysis.py  charts.py  chatbot.py  data.py  geo.py  llm.py  metrics.py
