[project]
name = "safecity-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "folium",
    "geopandas",
    "pyarrow",
    "python-dotenv",
    "litellm",          # ← REQUIRED
    "reportlab"
    ]
